; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/netinet/extr_ip_dummynet.c_heapify.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/netinet/extr_ip_dummynet.c_heapify.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dn_heap = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dn_heap*)* @heapify to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @heapify(%struct.dn_heap* %0) #0 {
  %2 = alloca %struct.dn_heap*, align 8
  %3 = alloca i32, align 4
  store %struct.dn_heap* %0, %struct.dn_heap** %2, align 8
  store i32 0, i32* %3, align 4
  br label %4

4:                                                ; preds = %14, %1
  %5 = load i32, i32* %3, align 4
  %6 = load %struct.dn_heap*, %struct.dn_heap** %2, align 8
  %7 = getelementptr inbounds %struct.dn_heap, %struct.dn_heap* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = icmp slt i32 %5, %8
  br i1 %9, label %10, label %17

10:                                               ; preds = %4
  %11 = load %struct.dn_heap*, %struct.dn_heap** %2, align 8
  %12 = load i32, i32* %3, align 4
  %13 = call i32 @heap_insert(%struct.dn_heap* %11, i32 %12, i32* null)
  br label %14

14:                                               ; preds = %10
  %15 = load i32, i32* %3, align 4
  %16 = add nsw i32 %15, 1
  store i32 %16, i32* %3, align 4
  br label %4

17:                                               ; preds = %4
  ret void
}

declare dso_local i32 @heap_insert(%struct.dn_heap*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
